--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -7,12 +7,21 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="top">
+    <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+    <section class="card" id="html-section">
+      <h2> HTML</h2>
+
+    </section>
+    <section class="card" id="css-section">
+      <h2>CSS</h2>
+    </section>
+    <section class="card" id="javascript-section">
+      <h2>JAVASCRIPT</h2>
+    </section>
     </main>
 
     <footer>
